@@ -4,8 +4,10 @@ import static org.sopt.app.application.playground.PlaygroundHeaderCreator.create
 import static org.sopt.app.application.playground.PlaygroundHeaderCreator.createDefaultHeader;
 
 import io.jsonwebtoken.ExpiredJwtException;
+import jakarta.persistence.EntityNotFoundException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -19,6 +21,7 @@ import lombok.val;
 import org.sopt.app.application.auth.dto.PlaygroundAuthTokenInfo.RefreshedToken;
 import org.sopt.app.application.playground.dto.PlayGroundEmploymentResponse;
 import org.sopt.app.application.playground.dto.PlayGroundPostCategory;
+import org.sopt.app.application.playground.dto.PlayGroundPostDetailResponse;
 import org.sopt.app.application.playground.dto.PlaygroundPostInfo.PlaygroundPost;
 import org.sopt.app.application.playground.dto.PlaygroundPostInfo.PlaygroundPostResponse;
 import org.sopt.app.application.playground.dto.PlaygroundProfileInfo.ActiveUserIds;
@@ -29,12 +32,14 @@ import org.sopt.app.application.playground.dto.PlaygroundProfileInfo.OwnPlaygrou
 import org.sopt.app.application.playground.dto.PlaygroundProfileInfo.PlaygroundMain;
 import org.sopt.app.application.playground.dto.PlaygroundProfileInfo.PlaygroundProfile;
 import org.sopt.app.application.playground.dto.PlaygroundProfileInfo.UserActiveInfo;
+import org.sopt.app.application.playground.dto.PostWithMemberInfo;
 import org.sopt.app.common.exception.BadRequestException;
 import org.sopt.app.common.exception.UnauthorizedException;
 import org.sopt.app.common.response.ErrorCode;
 import org.sopt.app.domain.enums.UserStatus;
 import org.sopt.app.presentation.auth.AppAuthRequest.AccessTokenRequest;
 import org.sopt.app.presentation.auth.AppAuthRequest.CodeRequest;
+import org.sopt.app.presentation.home.response.CoffeeChatResponse;
 import org.sopt.app.presentation.home.response.EmploymentPostResponse;
 import org.sopt.app.presentation.home.response.RecentPostsResponse;
 import org.springframework.beans.factory.annotation.Value;
@@ -199,12 +204,50 @@ public class PlaygroundAuthService {
                     .join();
         }
     }
+
+    public List<RecentPostsResponse> getRecentPostsWithMemberInfo(String playgroundToken) {
+        List<RecentPostsResponse> recentPosts = getRecentPosts(playgroundToken);
+        return getPostsWithMemberInfo(playgroundToken, recentPosts);
+    }
   
     public List<EmploymentPostResponse> getPlaygroundEmploymentPost(String accessToken) {
         Map<String, String> requestHeader = createAuthorizationHeaderByUserPlaygroundToken(accessToken);
         PlayGroundEmploymentResponse postInfo = playgroundClient.getPlaygroundEmploymentPost(requestHeader,16,10,0);
         return postInfo.posts().stream()
                 .map(EmploymentPostResponse::of)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<CoffeeChatResponse> getCoffeeChatList(String accessToken) {
+        Map<String, String> headers = PlaygroundHeaderCreator.createAuthorizationHeaderByUserPlaygroundToken(accessToken);
+        return playgroundClient.getCoffeeChatList(headers).coffeeChatList().stream()
+                .filter(member -> !member.isBlind())
+                .map(CoffeeChatResponse::of)
+                .toList();
+    }
+
+    public List<EmploymentPostResponse> getPlaygroundEmploymentPostWithMemberInfo(String playgroundToken) {
+        List<EmploymentPostResponse> employmentPosts = getPlaygroundEmploymentPost(playgroundToken);
+        return getPostsWithMemberInfo(playgroundToken, employmentPosts);
+    }
+
+    private <T extends PostWithMemberInfo> T addMemberInfoToPost(T post, PlayGroundPostDetailResponse postDetail) {
+        if (postDetail.member() != null) {
+            return (T) post.withMemberDetail(postDetail.member().name(), postDetail.member().profileImage());
+        } else if (postDetail.anonymousProfile() != null) {
+            return (T) post.withMemberDetail(postDetail.anonymousProfile().nickname(), postDetail.anonymousProfile().profileImgUrl());
+        }
+        throw new EntityNotFoundException("Member not found");
+    }
+
+    private <T extends PostWithMemberInfo> List<T> getPostsWithMemberInfo(String playgroundToken, List<T> posts) {
+        final Map<String, String> accessToken = createAuthorizationHeaderByUserPlaygroundToken(playgroundToken);
+        List<T> mutablePosts = new ArrayList<>();
+        for (T post : posts) {
+            Long postId = post.getId();
+            PlayGroundPostDetailResponse postDetail = playgroundClient.getPlayGroundPostDetail(accessToken, postId);
+            mutablePosts.add(addMemberInfoToPost(post, postDetail));
+        }
+        return mutablePosts;
     }
 }
